--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ header ul li .home{
     align-items:flex-end;
     padding-top: -20px;
 }
-#right img {
+#right .background {
     width: 40vw;
     margin-left: -120px;
     z-index: -1;
@@ -148,3 +148,101 @@ header ul li .home{
     color: #575757;
     margin-top: 20px;
 }
+
+.button-wrapper {
+    width: 192px;
+    height: 68px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FB9333;
+    border-radius: 100px;
+}
+.button-wrapper *{
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #FFFFFF;
+}
+
+#stats {
+    display: flex;
+    flex-direction: row;
+    width: 40vw;
+}
+#stats p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #828282;
+}
+
+#stats p span{
+    font-size: 24px;
+    font-weight: 600;
+    color: #575757;
+}
+
+.our-reviews {
+    width: 288px;
+    height: 70px;
+    min-width: 288px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    background-color: #FFFFFF;
+    border-radius: 100px;
+    margin-right: 300px;
+    margin-top:  -300px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #575757;
+}
+
+.our-reviews #emote {
+    max-width: 60px;
+    margin-top: 3px;
+    margin-left: 5px;
+    max-height: 60px;
+    min-height: 60px;
+    min-width: 60px;
+}
+
+.p-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    padding: 0;
+}
+
+.p-wrapper p {
+    margin: 0;
+    padding: 0;
+}
+.p-wrapper .small-review-text {
+    font-size: 12px;
+    color: #828282;
+    font-weight: 500;
+}
+
+.star-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 10px;
+    width: 200px
+}
+
+/* .break{
+    flex-basis: 100%;
+    height: 0; 
+  margin: 0;        
+  padding: 0;
+} */
