--- a/style.css
+++ b/style.css
@@ -204,12 +204,15 @@ header ul li .home{
 }
 
 .our-reviews #emote {
-    max-width: 60px;
+    width: 50px;
+    height: 50px;
+    max-width: 50px;
     margin-top: 3px;
     margin-left: 5px;
-    max-height: 60px;
-    min-height: 60px;
-    min-width: 60px;
+    max-height: 50px;
+    min-height: 50px;
+    min-width: 50px;
+
 }
 
 .p-wrapper {
@@ -240,9 +243,119 @@ header ul li .home{
     width: 200px
 }
 
+/* Main section */
+
+.top-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:start;
+    width: 90vw;
+    margin-top: 100px;
+}
+
+/* #why-choose-us {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+} */
+
 /* .break{
     flex-basis: 100%;
     height: 0; 
   margin: 0;        
   padding: 0;
 } */
+
+/* General Section Styling */
+#why-choose-us {
+    /* background-color: #fff; */
+    padding: 60px 20px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    color: #333;
+    width: 90vw;
+}
+
+/* Heading Styling */
+#why-choose-us .top-wrapper h2 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    margin-top: -10px;
+}
+
+#why-choose-us .top-wrapper .highlight {
+    color: #FF8C00; /* Orange color */
+}
+
+#why-choose-us .top-wrapper p {
+    font-size: 1em;
+    color: #666;
+    max-width: 600px;
+    margin: 0 auto 40px auto;
+    line-height: 1.6;
+}
+
+/* Article Card Styling */
+#why-choose-us .why-choose-us {
+    /* background-color: #fff; */
+    border: 1px solid #fff0da;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px;
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: inline-block;
+    vertical-align: top;
+    width: 370px;
+    text-align: left;
+    height: 470px;
+}
+
+#why-choose-us .why-choose-us img {
+    width:123px;
+    height: 123px;
+    margin-bottom: 30px;
+}
+
+#why-choose-us .why-choose-us h3 {
+    font-size: 24px;
+    font-family: 'Poppins', sans-serif;
+    color: #222;
+    margin: 30px 0;
+}
+
+#why-choose-us .why-choose-us p {
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 40px;
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.5;
+    height: 130px;
+}
+
+#why-choose-us .why-choose-us a {
+    display: inline-block;
+    background-color: white;
+    color: #575757;
+    padding: 10px 20px;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+#why-choose-us .why-choose-us a:hover {
+    background-color: #e67600;
+    transform: scale(1.05);
+}
+
+#why-choose-us .why-choose-us:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    a {
+        color: white;
+        background-color: #e67600;
+    }
+}
